--- a/Sasha-Hub/MainWindow.xaml
+++ b/Sasha-Hub/MainWindow.xaml
@@ -12,19 +12,19 @@
             <ColumnDefinition Width="117*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="200*"/>
-            <RowDefinition Height="119*"/>
+            <RowDefinition Height="225*"/>
+            <RowDefinition Height="94*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="button" Content="Button" Grid.Column="1" Margin="10,10,10,0" VerticalAlignment="Top" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
-        <Button x:Name="button_Copy" Content="Button" Grid.Column="1" Margin="10,35,10,0" VerticalAlignment="Top"/>
-        <Button x:Name="button_Copy1" Content="Button" Grid.Column="1" Margin="10,60,10,0" VerticalAlignment="Top"/>
-        <Button x:Name="button_Copy2" Content="Button" Grid.Column="1" Margin="10,85,10,0" VerticalAlignment="Top"/>
-        <Button x:Name="button_Copy3" Content="Button" Grid.Column="1" Margin="10,110,10,0" VerticalAlignment="Top"/>
-        <Button x:Name="button_Copy4" Content="Button" Grid.Column="1" Margin="10,135,10,0" VerticalAlignment="Top"/>
-        <Button x:Name="button_Copy5" Content="Button" Grid.Column="1" Margin="10,160,10,0" Height="20" VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="Button" Grid.Column="1" Margin="10,10,10,0" VerticalAlignment="Top" UseLayoutRounding="False" VerticalContentAlignment="Center" Height="25"/>
+        <Button x:Name="button_Copy" Content="Button" Grid.Column="1" Margin="10,41,10,0" VerticalAlignment="Top" Height="25"/>
+        <Button x:Name="button_Copy1" Content="Button" Grid.Column="1" Margin="10,71,10,0" VerticalAlignment="Top" Height="25"/>
+        <Button x:Name="button_Copy2" Content="Button" Grid.Column="1" Margin="10,131,10,0" VerticalAlignment="Top" Height="25"/>
+        <Button x:Name="button_Copy3" Content="Button" Grid.Column="1" Margin="10,161,10,0" VerticalAlignment="Top" Height="25"/>
+        <Button x:Name="button_Copy4" Content="Button" Grid.Column="1" Margin="10,101,10,0" VerticalAlignment="Top" Height="25"/>
+        <Button x:Name="button_Copy5" Content="Button" Grid.Column="1" Margin="10,191,10,0" Height="25" VerticalAlignment="Top"/>
         <ScrollViewer Margin="10,5,10,10"/>
-        <TextBox x:Name="textBox" Margin="10,10,112,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" Height="19" VerticalAlignment="Top"/>
-        <Button x:Name="button_Copy6" Content="Button" Margin="0,9,10,0" Grid.Row="1" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Width="97" IsDefault="True"/>
+        <TextBox x:Name="textBox" Margin="10,10,112,0" Grid.Row="1" TextWrapping="Wrap" Height="30" VerticalAlignment="Top" Text="Sasha" SpellCheck.IsEnabled="True" UndoLimit="600" FontSize="14.667"/>
+        <Button x:Name="button_Copy6" Content="Button" Margin="0,9,10,0" Grid.Row="1" Height="31" VerticalAlignment="Top" HorizontalAlignment="Right" Width="97" IsDefault="True"/>
         <Image x:Name="image" Grid.Column="1" Margin="10" Grid.Row="1" ToolTip="" Source="Assets/Sasha.png"/>
 
     </Grid>
