--- a/Sasha-Hub/MainWindow.xaml
+++ b/Sasha-Hub/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Sasha_Hub"
+        xmlns:wfi="clr-namespace:System.Windows.Forms.Integration;assembly=WindowsFormsIntegration"
+        xmlns:winForms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" MinWidth="525" MinHeight="350">
     <Grid>
@@ -26,6 +28,8 @@
         <TextBox x:Name="textBox" Margin="10,10,112,0" Grid.Row="1" TextWrapping="Wrap" Height="30" VerticalAlignment="Top" Text="Sasha" SpellCheck.IsEnabled="True" UndoLimit="600" FontSize="14.667"/>
         <Button x:Name="button_Copy6" Content="Button" Margin="0,9,10,0" Grid.Row="1" Height="31" VerticalAlignment="Top" HorizontalAlignment="Right" Width="97" IsDefault="True"/>
         <Image x:Name="image" Grid.Column="1" Margin="10" Grid.Row="1" ToolTip="" Source="Assets/Sasha.png"/>
-
+        <WindowsFormsHost HorizontalAlignment="Left" Height="74" Margin="10,10,0,0" VerticalAlignment="Top" Width="97" Grid.Row="1" Grid.Column="1">
+            <winForms:PictureBox x:Name="Loading" BackgroundImageLayout="None" SizeMode="Zoom"></winForms:PictureBox>
+        </WindowsFormsHost>
     </Grid>
 </Window>
