--- a/Sasha-Hub/MainWindow.xaml
+++ b/Sasha-Hub/MainWindow.xaml
@@ -24,7 +24,7 @@
         <Button x:Name="button_Copy5" Content="Button" Grid.Column="1" Margin="10,191,10,0" Height="25" VerticalAlignment="Top"/>
         <ScrollViewer Margin="10,5,10,10"/>
         <TextBox x:Name="textBox" Margin="10,10,112,0" Grid.Row="1" TextWrapping="Wrap" Height="30" VerticalAlignment="Top" Text="Sasha" SpellCheck.IsEnabled="True" UndoLimit="600" FontSize="14.667"/>
-        <Button x:Name="button_Copy6" Content="Button" Margin="0,9,10,0" Grid.Row="1" Height="31" VerticalAlignment="Top" HorizontalAlignment="Right" Width="97" IsDefault="True"/>
+        <Button x:Name="button_Copy6" Content="Button" Margin="0,9,10,0" Grid.Row="1" Height="31" VerticalAlignment="Top" HorizontalAlignment="Right" Width="97" IsDefault="True" Click="button_Copy6_Click"/>
         <Image x:Name="image" Grid.Column="1" Margin="10" Grid.Row="1" ToolTip="" Source="Assets/Sasha.png"/>
 
     </Grid>
